--- a/header.css
+++ b/header.css
@@ -67,5 +67,13 @@
 .container__titulo--negrito{
     font-weight: 700;
 }
+.opcoes{
+    display: flex;
+}
+.opcoes__item{
+    padding: 0 1em;
+    text-transform: uppercase;
+
+}
 }
     
